--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,6 @@
+# The order of packages is significant, because pip processes them in the order
+# of appearance. Changing the order has an impact on the overall integration
+# process, which may cause wedges in the gate later.
+
 ovs>=2.6.1 # Apache-2.0
+pbr>=1.8 # Apache-2.0
