Add some bridge and port functional tests
Change-Id: Iaeb71bc4dff3f076d913d6bf0b34e0dd19dc9b93

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ install_command = pip install -c{env:UPPER_CONSTRAINTS_FILE:https://git.openstac
 setenv =
    VIRTUAL_ENV={envdir}
    PYTHONWARNINGS=default::DeprecationWarning
+   OS_TEST_PATH=./ovsdbapp/tests/unit
 deps = -r{toxinidir}/test-requirements.txt
 commands = python setup.py testr --slowest --testr-args='{posargs}'
 
@@ -30,6 +31,9 @@ commands =
 
 [testenv:debug]
 commands = oslo_debug_helper {posargs}
+
+[testenv:functional]
+setenv = OS_TEST_PATH=./ovsdbapp/tests/functional
 
 [flake8]
 # E123, E125 skipped as they are invalid PEP-8.
