--- a/tox.ini
+++ b/tox.ini
@@ -5,11 +5,12 @@ skipsdist = True
 
 [testenv]
 usedevelop = True
-install_command = pip install -c{env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt} {opts} {packages}
 setenv =
    VIRTUAL_ENV={envdir}
    PYTHONWARNINGS=default::DeprecationWarning
    OS_TEST_PATH=./ovsdbapp/tests/unit
+   CLIENT_NAME=ovsdbapp
+install_command = {toxinidir}/tools/tox_install.sh {env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt} {opts} {packages}
 deps = -r{toxinidir}/test-requirements.txt
 commands = python setup.py testr --slowest --testr-args='{posargs}'
 
@@ -33,7 +34,8 @@ commands =
 commands = oslo_debug_helper {posargs}
 
 [testenv:functional]
-setenv = OS_TEST_PATH=./ovsdbapp/tests/functional
+setenv = {[testenv]setenv}
+         OS_TEST_PATH=./ovsdbapp/tests/functional
 
 [flake8]
 # E123, E125 skipped as they are invalid PEP-8.
