Ignore .testrepository and editor(s) files
This patch is just adding .testrepository and some editor(s) swap files
to .gitignore.

Change-Id: I94b52f5dea27ea3bc0fb590ef3abf74dc6e11876

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ pip-delete-this-directory.txt
 # Unit test / coverage reports
 htmlcov/
 .tox/
+.testrepository
 .coverage
 .coverage.*
 .cache
@@ -90,3 +91,8 @@ ENV/
 
 # PyCharm settings
 .idea
+
+# Editors
+*~
+.*.swp
+.*sw?
