--- a/tox.ini
+++ b/tox.ini
@@ -37,6 +37,7 @@ commands = oslo_debug_helper {posargs}
 [testenv:functional]
 setenv = {[testenv]setenv}
          OS_TEST_PATH=./ovsdbapp/tests/functional
+         OVS_SRCDIR={envdir}/src/ovs
 
 [flake8]
 # E123, E125 skipped as they are invalid PEP-8.
