--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,7 @@ commands = python setup.py testr --slowest --testr-args='{posargs}'
 
 [testenv:pep8]
 commands = flake8 {posargs}
+           {toxinidir}/tools/coding-checks.sh --pylint '{posargs}'
 
 [testenv:venv]
 commands = {posargs}
