pylint: Disable duplicate-code for check
Duplicated code is recognized on same imports which in modules that
implement specific API doesn't make sense as imports will be likely the
same: e.g.
http://logs.openstack.org/41/470441/28/check/gate-ovsdbapp-pep8-ubuntu-xenial/84bbf0c/console.html#_2017-07-03_20_00_50_632331

The patch disables this check for pylint.

Change-Id: Ia1d410abcf53d30ef71edb5404cf53b430aa3523

--- a/.pylintrc
+++ b/.pylintrc
@@ -26,6 +26,7 @@ disable=
  invalid-name,
  missing-docstring,
 # "R" Refactor recommendations
+ duplicate-code,
  no-self-use,
  too-few-public-methods,
  too-many-ancestors,
