--- a/tox.ini
+++ b/tox.ini
@@ -38,6 +38,7 @@ commands = oslo_debug_helper {posargs}
 setenv = {[testenv]setenv}
          OS_TEST_PATH=./ovsdbapp/tests/functional
          OVS_SRCDIR={envdir}/src/ovs
+passenv = KEEP_VENV
 
 [flake8]
 # E123, E125 skipped as they are invalid PEP-8.
