Avoid tox_install.sh for constraints support
We do not need tox_install.sh, pip can handle constraints itself
and install the project correctly. Thus update tox.ini and remove
the now obsolete tools/tox_install.sh file.

This follows https://review.openstack.org/#/c/508061 to remove
tools/tox_install.sh.

tox_install.sh was also building ovs for functional test. Move this into
tools/setup-ovs.sh and call it from functional tox environment.

Change-Id: I5857c8ae3e945328c0f24bda37629ce7e0faefa7

--- a/tox.ini
+++ b/tox.ini
@@ -9,9 +9,11 @@ setenv =
    VIRTUAL_ENV={envdir}
    PYTHONWARNINGS=default::DeprecationWarning
    OS_TEST_PATH=./ovsdbapp/tests/unit
-   CLIENT_NAME=ovsdbapp
-install_command = {toxinidir}/tools/tox_install.sh {env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt} {opts} {packages}
-deps = -r{toxinidir}/test-requirements.txt
+install_command = pip install {opts} {packages}
+deps =
+  -c{env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt}
+  -r{toxinidir}/test-requirements.txt
+  -r{toxinidir}/requirements.txt
 commands = python setup.py testr --slowest --testr-args='{posargs}'
 
 [testenv:pep8]
@@ -39,6 +41,9 @@ setenv = {[testenv]setenv}
          OS_TEST_PATH=./ovsdbapp/tests/functional
          OVS_SRCDIR={envdir}/src/ovs
 passenv = KEEP_VENV
+commands =
+         {toxinidir}/tools/setup-ovs.sh
+         {[testenv]commands}
 
 [flake8]
 # E123, E125 skipped as they are invalid PEP-8.
