--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ commands = stestr run --slowest {posargs}
 
 [testenv:pep8]
 basepython = python2.7
-commands = flake8 {posargs}
+commands = flake8
            {toxinidir}/tools/coding-checks.sh --pylint '{posargs}'
 
 [testenv:venv]
