--- a/tox.ini
+++ b/tox.ini
@@ -18,8 +18,8 @@ commands = stestr run --slowest {posargs}
 
 [testenv:pep8]
 basepython = python2.7
-commands = flake8 {posargs}
-           {toxinidir}/tools/coding-checks.sh --pylint '{posargs}'
+commands = flake8
+           {toxinidir}/tools/coding-checks.sh --all '{posargs}'
 
 [testenv:venv]
 commands = {posargs}
