Check for oslo library usage
Occasionally oslo library usage sneaks in, so add a coding check
that checks for ^oslo\. in requirements.txt. We currently still
use oslo.test, so don't check test-requirements.txt. This should
fail to pass tests until I34357d5a594330d07f5cad372859d98efb5d3fde
merges.

Change-Id: I53108584ee47a7f1b6c7df90c49f95725cec69f9

--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ commands = stestr run --slowest {posargs}
 [testenv:pep8]
 basepython = python2.7
 commands = flake8
-           {toxinidir}/tools/coding-checks.sh --pylint '{posargs}'
+           {toxinidir}/tools/coding-checks.sh --all '{posargs}'
 
 [testenv:venv]
 commands = {posargs}
