update pylint to 1.9.2
The older version of pylint being used does not work
correctly under python 3. In order to be able to
update the pylint job to run under python 3,
we need to update the tool.

Aslo fix a couple of pylint issues:

- Fix import order issues.
- Fix 'no-else-return' checks.

Added the following to the blacklist:

- inconsistent-return-statements
- catching-non-exception
- using-constant-test

Change-Id: I91a304241ebdb4d6bd15509cae8463d7b43b3c0f
Signed-off-by: Chuck Short <chucks@redhat.com>

--- a/.pylintrc
+++ b/.pylintrc
@@ -37,6 +37,9 @@ disable=
  too-many-locals,
  too-many-public-methods,
  too-many-return-statements,
+ inconsistent-return-statements,
+ catching-non-exception,
+ using-constant-test,
  too-many-statements
 
 [BASIC]
