import zuul job settings from project-config
This is a mechanically generated patch to complete step 1 of moving
the zuul job settings out of project-config and into each project
repository.

Because there will be a separate patch on each branch, the branch
specifiers for branch-specific jobs have been removed.

Because this patch is generated by a script, there may be some
cosmetic changes to the layout of the YAML file(s) as the contents are
normalized.

See the python3-first goal document for details:
https://governance.openstack.org/tc/goals/stein/python3-first.html

Change-Id: I180834fb33aae30065ab58edfb3b3665d2f91e54
Story: #2002586
Task: #24314

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -1,7 +1,18 @@
 - project:
+    templates:
+      - openstack-python-jobs
+      - openstack-python35-jobs
+      - check-requirements
     check:
       jobs:
         - openstack-tox-lower-constraints
+        - openstack-tox-functional
+        - legacy-tempest-dsvm-networking-ovn-ovs-release-ovsdbapp-src:
+            voting: false
+            irrelevant-files:
+              - ^(test-|)requirements.txt$
+              - ^setup.cfg$
     gate:
       jobs:
         - openstack-tox-lower-constraints
+        - openstack-tox-functional
