Move ovsdbapp jobs to its tree
This patch is moving the legacy CI jobs for ovsdbapp into its tree. This
will give the project more flexibility to control what jobs should run
in which pipeline as well as facilitate creation/deletion/updates for
new and existing jobs.

Change-Id: I2e34bd16ab9907bdc3f9225b879f9b0846d2c779
(cherry picked from commit 969a201ee45d60d1682679496dd0a967a251c14e)

--- a/zuul.d/project.yaml
+++ b/zuul.d/project.yaml
@@ -7,12 +7,9 @@
       jobs:
         - openstack-tox-lower-constraints
         - openstack-tox-functional
-        - legacy-tempest-dsvm-networking-ovn-ovs-release-ovsdbapp-src:
-            voting: false
-            irrelevant-files:
-              - ^(test-|)requirements.txt$
-              - ^setup.cfg$
+        - ovsdbapp-tempest-dsvm-networking-ovn-ovs-release
     gate:
       jobs:
         - openstack-tox-lower-constraints
         - openstack-tox-functional
+        - ovsdbapp-tempest-dsvm-networking-ovn-ovs-release
