--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ description-file =
     README.rst
 author = OpenStack
 author-email = openstack-discuss@lists.openstack.org
-home-page = http://www.openstack.org/
+home-page = https://pypi.org/project/ovsdbapp/
 classifier =
     Environment :: OpenStack
     Intended Audience :: Information Technology
