--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,8 @@
 [tox]
 minversion = 3.1.1
-envlist = py36,py37,pypy,pep8
+envlist = py36,py37,pep8
 skipsdist = True
+ignore_basepython_conflict = True
 
 [testenv]
 usedevelop = True
@@ -17,6 +18,7 @@ deps =
 commands = stestr run --slowest {posargs}
 
 [testenv:pep8]
+basepython= python3
 commands = flake8
            {toxinidir}/tools/coding-checks.sh --all '{posargs}'
 
@@ -63,11 +65,17 @@ commands =
          {[testenv]commands}
 
 [flake8]
-# E123, E125 skipped as they are invalid PEP-8.
-
+# W504 line break after binary operator
+ignore = W504
+# H106: Don't put vim configuration in source files
+# H203: Use assertIs(Not)None to check for None
+# H204: Use assert(Not)Equal to check for equality
+# H205: Use assert(Greater|Less)(Equal) for comparison
+# H904: Delay string interpolations at logging calls
+enable-extensions=H106,H203,H204,H205,H904
 show-source = True
-ignore = E123,E125
 exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,build
+import-order-style = pep8
 
 [testenv:lower-constraints]
 deps =
