Switch functional and tempest jobs to python3
As part of the python3-first goal, add functional testing for python3
for both the functional and tempest jobs.

Change-Id: Iccdb3f9fc9b60bb893a7f3a440cce13d80379203

--- a/zuul.d/project.yaml
+++ b/zuul.d/project.yaml
@@ -8,9 +8,11 @@
       jobs:
         - openstack-tox-lower-constraints
         - openstack-tox-functional
+        - openstack-tox-functional-py36
         - ovsdbapp-tempest-dsvm-networking-ovn-ovs-release
     gate:
       jobs:
         - openstack-tox-lower-constraints
         - openstack-tox-functional
+        - openstack-tox-functional-py36
         - ovsdbapp-tempest-dsvm-networking-ovn-ovs-release
