--- a/zuul.d/legacy-ovsdbapp-jobs.yaml
+++ b/zuul.d/legacy-ovsdbapp-jobs.yaml
@@ -5,7 +5,7 @@
     post-run: playbooks/legacy/tempest-dsvm-networking-ovn-ovs-release-ovsdbapp-src/post.yaml
     timeout: 7800
     required-projects:
-      - openstack-infra/devstack-gate
+      - openstack/devstack-gate
       - openstack/networking-ovn
       - openstack/neutron-tempest-plugin
       - openstack/ovsdbapp
