--- a/tox.ini
+++ b/tox.ini
@@ -51,6 +51,12 @@ commands =
          {toxinidir}/tools/setup-ovs.sh
          {[testenv]commands}
 
+[testenv:functional-py36]
+basepython = python3.6
+setenv = {[testenv:functional]setenv}
+passenv = {[testenv:functional]passenv}
+commands = {[testenv:functional]commands}
+
 [flake8]
 # E123, E125 skipped as they are invalid PEP-8.
 
