--- a/zuul.d/project.yaml
+++ b/zuul.d/project.yaml
@@ -1,8 +1,7 @@
 - project:
     templates:
       - openstack-python-jobs
-      - openstack-python35-jobs
-      - openstack-python36-jobs
+      - openstack-python3-train-jobs
       - check-requirements
     check:
       jobs:
