Update Zuul jobs: Enable docs publishing
Start publishing docs with using the proper template.

For this, add also a doc/requirements.txt file and move docs
requirements there. Update tox.ini for this and use the modern way to
invoke sphinx-build for building.
Remove obsolete sectoins from setup.cfg.
Update the conf.py files and remove unused lines
with newer openstackdocstheme - and require newer theme.

Fix indents in CONTRIBUTING.rst so that the formatting works nicely.

Also, use lower-constraints template instead of individual jobs.

Change-Id: Ia1a7030878f12ca0b8184363173eada929ece3bd

--- a/tox.ini
+++ b/tox.ini
@@ -31,10 +31,15 @@ commands = python setup.py test --coverage --testr-args='{posargs}'
 
 [testenv:docs]
 basepython = python3
-commands = python setup.py build_sphinx
+deps =
+  -r{toxinidir}/doc/requirements.txt
+commands =
+  sphinx-build -W -b html -d doc/build/doctrees doc/source doc/build/html
 
 [testenv:releasenotes]
 basepython = python3
+deps =
+  -r{toxinidir}/doc/requirements.txt
 commands =
   sphinx-build -a -E -W -d releasenotes/build/doctrees -b html releasenotes/source releasenotes/build/html
 
