--- a/zuul.d/legacy-ovsdbapp-jobs.yaml
+++ b/zuul.d/legacy-ovsdbapp-jobs.yaml
@@ -7,7 +7,8 @@
     required-projects:
       - openstack/devstack-gate
       - openstack/networking-ovn
-      - openstack/neutron-tempest-plugin
+      - name: openstack/neutron-tempest-plugin
+        override-checkout: 0.3.0
       - openstack/ovsdbapp
       - openstack/octavia
       - openstack/tempest
