Change upper_constaints URL to new format
While manually executing:
tox -e functional

the tox_install.sh fails on 302 redirect. This patch
modifies the URL to reflect change to opendev.org.

Change-Id: Ibff2dbed1ff12b21028095f4abaff853424159a3

--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ setenv =
    PYTHONWARNINGS=default::DeprecationWarning
    OS_TEST_PATH=./ovsdbapp/tests/unit
    CLIENT_NAME=ovsdbapp
-install_command = {toxinidir}/tools/tox_install.sh {env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt?h=stable/queens} {opts} {packages}
+install_command = {toxinidir}/tools/tox_install.sh {env:UPPER_CONSTRAINTS_FILE:https://opendev.org/openstack/requirements/raw/branch/stable/queens/upper-constraints.txt} {opts} {packages}
 deps = -r{toxinidir}/test-requirements.txt
 commands = python setup.py testr --slowest --testr-args='{posargs}'
 
