--- a/tox.ini
+++ b/tox.ini
@@ -46,6 +46,7 @@ commands = oslo_debug_helper {posargs}
 setenv = {[testenv]setenv}
          OS_TEST_PATH=./ovsdbapp/tests/functional
          OVS_SRCDIR={envdir}/src/ovs
+         OVN_SRCDIR={envdir}/src/ovn
 passenv = KEEP_VENV
 commands =
          {toxinidir}/tools/setup-ovs.sh
