--- a/tox.ini
+++ b/tox.ini
@@ -43,19 +43,15 @@ basepython = python3
 commands = oslo_debug_helper {posargs}
 
 [testenv:functional]
+basepython = python3
 setenv = {[testenv]setenv}
          OS_TEST_PATH=./ovsdbapp/tests/functional
          OVS_SRCDIR={envdir}/src/ovs
+         OVN_SRCDIR={envdir}/src/ovn
 passenv = KEEP_VENV
 commands =
          {toxinidir}/tools/setup-ovs.sh
          {[testenv]commands}
-
-[testenv:functional-py36]
-basepython = python3.6
-setenv = {[testenv:functional]setenv}
-passenv = {[testenv:functional]passenv}
-commands = {[testenv:functional]commands}
 
 [flake8]
 # E123, E125 skipped as they are invalid PEP-8.
