--- a/tox.ini
+++ b/tox.ini
@@ -55,6 +55,8 @@ setenv = {[testenv]setenv}
          OS_TEST_PATH=./ovsdbapp/tests/functional
          OVS_SRCDIR={envdir}/src/ovs
          OVN_SRCDIR={envdir}/src/ovn
+         OVS_BRANCH={env:OVS_BRANCH:}
+         OVN_BRANCH={env:OVN_BRANCH:}
 passenv = KEEP_VENV
 commands =
          {toxinidir}/tools/setup-ovs.sh
