Unbreak mock-releated autospec issue
For some reason, in stable/stein and older, the autospec=True in
this test started failing. Using python3's unittest.mock works, so
just to get this working use that if it exists.

Also adding basepython to python2 via tox.ini to keep pep8 working
in stable/queens.

Change-Id: I508bc07754f11165fb50f5f3f412f6191d27f8b4
Closes-bug: #1867634

--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,7 @@ deps = -r{toxinidir}/test-requirements.txt
 commands = python setup.py testr --slowest --testr-args='{posargs}'
 
 [testenv:pep8]
+basepython = python2
 commands = flake8 {posargs}
            {toxinidir}/tools/coding-checks.sh --pylint '{posargs}'
 
