Capture test run logging
Clean up test run output by hiding the logging for passing tests.

Change-Id: I66450aec8a352097b9362b186e14d1c46d1bdb15

--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,10 @@ setenv =
    VIRTUAL_ENV={envdir}
    PYTHONWARNINGS=default::DeprecationWarning
    OS_TEST_PATH=./ovsdbapp/tests/unit
+   OS_LOG_CAPTURE={env:OS_LOG_CAPTURE:true}
+   OS_STDOUT_CAPTURE={env:OS_STDOUT_CAPTURE:true}
+   OS_STDERR_CAPTURE={env:OS_STDERR_CAPTURE:true}
+   PYTHONWARNINGS=default::DeprecationWarning,ignore::DeprecationWarning:distutils,ignore::DeprecationWarning:site
 install_command = pip install {opts} {packages}
 deps =
   -c{env:UPPER_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/master}
