Move linters dependencies to tox.ini
That fixes some dependency clashes in py36 job when installing
"pylint" with "astroid" library.

Closes-Bug: #1955724
Change-Id: I7cc4b779c68fe21d6ca50b6c76cdd2b6edaa7ea2

--- a/tox.ini
+++ b/tox.ini
@@ -20,11 +20,15 @@ deps =
   -c{env:UPPER_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/master}
   -r{toxinidir}/test-requirements.txt
   -r{toxinidir}/requirements.txt
+  hacking>=3.0.1,<3.1.0 # Apache-2.0
 commands = stestr run --slowest {posargs}
 
 [testenv:pep8]
 commands = flake8
            {toxinidir}/tools/coding-checks.sh --all '{posargs}'
+deps =
+  {[testenv]deps}
+  pylint==2.5.3 # GPLv2
 
 [testenv:venv]
 commands = {posargs}
