--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,10 @@
 [tox]
-minversion = 3.1.1
+minversion = 3.18.0
 envlist = py3,pep8
-skipsdist = True
 ignore_basepython_conflict = True
 
 [testenv]
-basepython = python3
+basepython = {env:TOX_PYTHON:python3}
 usedevelop = True
 setenv =
    VIRTUAL_ENV={envdir}
@@ -25,10 +24,11 @@ commands = stestr run --slowest {posargs}
 
 [testenv:pep8]
 commands = flake8
-           {toxinidir}/tools/coding-checks.sh --all '{posargs}'
+           bash {toxinidir}/tools/coding-checks.sh --all '{posargs}'
 deps =
   {[testenv]deps}
   pylint==2.5.3 # GPLv2
+allowlist_externals = bash
 
 [testenv:venv]
 commands = {posargs}
@@ -46,7 +46,7 @@ commands =
 [testenv:pdf-docs]
 envdir = {toxworkdir}/docs
 deps = {[testenv:docs]deps}
-whitelist_externals =
+allowlist_externals =
   make
 commands =
   sphinx-build -W -b latex doc/source doc/build/pdf
@@ -71,8 +71,9 @@ setenv = {[testenv]setenv}
          OVN_BRANCH={env:OVN_BRANCH:}
 passenv = KEEP_VENV
 commands =
-         {toxinidir}/tools/setup-ovs.sh
+         bash {toxinidir}/tools/setup-ovs.sh
          {[testenv]commands}
+allowlist_externals = bash
 
 [flake8]
 # W504 line break after binary operator
