Use OVN's OVS submodule for functional tests
The OVN tree for several years has had an OVS submodule that pulls
in the version of OVS it is guaranteed to work with. There is
currently a patch in OVS master that breaks the build of OVN main
so switch to using the submodule.

Change-Id: I61195cd3ebf8a5015890d3ba3988c3d9795ee817
(cherry picked from commit ee28e381fb46a04be3451de65a5166dd457eede8)

--- a/tox.ini
+++ b/tox.ini
@@ -63,10 +63,9 @@ commands = oslo_debug_helper {posargs}
 [testenv:functional]
 setenv = {[testenv]setenv}
          OS_TEST_PATH=./ovsdbapp/tests/functional
-         OVS_SRCDIR={envdir}/src/ovs
          OVN_SRCDIR={envdir}/src/ovn
-         VTEP_SRCDIR={envdir}/src/ovs/vtep
-         OVS_BRANCH={env:OVS_BRANCH:}
+         OVS_SRCDIR={envdir}/src/ovn/ovs
+         VTEP_SRCDIR={envdir}src/ovn/ovs/vtep
          OVN_BRANCH={env:OVN_BRANCH:}
 passenv = KEEP_VENV
 commands =
