--- a/.pylintrc
+++ b/.pylintrc
@@ -89,6 +89,7 @@ disable=
  too-many-locals,
  too-many-nested-blocks,
  too-many-public-methods,
+ too-many-positional-arguments,
  too-many-return-statements,
  too-many-statements,
  consider-using-set-comprehension,
